@@ -23,6 +23,7 @@ depth: 1
  * Make sure workflow timeline icons are visible in high-contrast mode (Loveth Omokaro)
  * Ensure authentication forms (login, password reset) have a visible border in Windows high-contrast mode (Loveth Omokaro)
  * Ensure visual consistency between buttons and links as buttons in Windows high-contrast mode (Albina Starykova)
+ * Ensure `ChooserBlock.extract_references` uses the model class, not the model string (Alex Tomkins)
 
 ## Upgrade considerations
 
