@@ -10,6 +10,7 @@ Changelog
  * Fix: Make sure workflow timeline icons are visible in high-contrast mode (Loveth Omokaro)
  * Fix: Ensure authentication forms (login, password reset) have a visible border in Windows high-contrast mode (Loveth Omokaro)
  * Fix: Ensure visual consistency between buttons and links as buttons in Windows high-contrast mode (Albina Starykova)
+ * Fix: references extraction for ChooserBlock (Alex Tomkins)
 
 
 4.1 LTS (xx.xx.xxxx) - IN DEVELOPMENT
